--- a/content/themes/storyrugs/src/sass/_contentHead.sass
+++ b/content/themes/storyrugs/src/sass/_contentHead.sass
@@ -26,9 +26,12 @@
   h3
     +millerbanner
     color: $black
-    font-size: 2.4rem
+    font-size: 1.6rem
     line-height: 1.2em
     text-align: center
+
+    +tablet
+      font-size: 2.4rem
 
   .tagline
     +gothmed
