--- a/content/themes/storyrugs/src/sass/_main.sass
+++ b/content/themes/storyrugs/src/sass/_main.sass
@@ -5,10 +5,13 @@
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 .page-banner
-  width: 90%
-  max-width: 1500px
+  width: 100%
   height: 680px
   margin: 0 auto
+
+  +tablet
+	  max-width: 1500px
+	  width: 90%
 
 
 /* OBJECTS -> For styling objects */
