--- a/content/themes/storyrugs/src/sass/_products.sass
+++ b/content/themes/storyrugs/src/sass/_products.sass
@@ -6,32 +6,47 @@
 
 .products 
   +flex
-  width: 860px
+  width: 100%
   margin: 0 auto
 
+  +tablet
+    width: 860px
+
   .product
-    flex: 0 0 388px
-    height: 541px
-    padding: 25px
-    margin-bottom: 60px
+    flex: 0 0 100%
+    height: 300px
+    padding: 15px
+    margin-bottom: 10px
 
     &:hover
       .product-text
         opacity: 1
+
+    +tablet
+      flex: 0 0 388px
+      height: 541px
+      padding: 25px
+      margin-bottom: 60px
 
 .product-image-wrapper
   width: 100%
   height: 100%
 
 .product-text
-  opacity: 0
+  opacity: 0.7
   width: 100%
   height: 100%
   transition: 0.6s opacity ease
 
+  +tablet
+    opacity: 0
+
 
   h3
-    padding-top: 220px
+    padding-top: 80px
+
+    +tablet
+      padding-top: 220px
 
   .desc, .onsale
     display: block
@@ -41,12 +56,16 @@
 
   .onsale
     height: 25px
-    margin-top: 140px
+    margin-top: 40px
+
+    +tablet
+      margin-top: 140px
 
   .price
     width: 100px
     display: block
     margin: 0 auto 0
+
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
@@ -56,6 +75,9 @@
 
   .product
     background-color: $litegrey
+
+  .product-image-wrapper
+    +img
 
 .product-text
   +img($c: 50%)
