--- a/content/themes/storyrugs/src/sass/_text.sass
+++ b/content/themes/storyrugs/src/sass/_text.sass
@@ -5,9 +5,12 @@
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 .text
-  width: 80%
-  max-width: 650px
+  width: 100%
   margin: 0 auto
+
+  +tablet
+    width: 80%
+    max-width: 650px
 
 .headcopy
   margin-bottom: 60px
@@ -26,6 +29,7 @@
 
 
 .copycta
+
   > a
     display: block
     width: 180px
@@ -36,7 +40,10 @@
     margin-top: 120px
 
   p
-    margin-top: 35px    
+    margin-top: 15px   
+
+    +tablet 
+      margin-top: 35px   
 
 
 /* OBJECTS -> For styling objects */
@@ -47,9 +54,12 @@
   h3
     +millerbanner
     color: $black
-    font-size: 2.8rem
+    font-size: 1.6rem
     line-height: 1.2em
     text-align: center
+
+    +tablet
+      font-size: 2.8rem
 
   p 
     +millerbanner
@@ -67,19 +77,27 @@
   h3
     +millerbanner
     color: $black
-    font-size: 2.8rem
+    font-size: 1.6rem
     line-height: 1.2em
     text-align: center
+
+    +tablet
+      font-size: 2.4rem
+
 
   a, p
     +gothbold
     color: $darkgrey
     background-color: $white
-    font-size: 0.85rem
+    font-size: 0.60rem
+    line-height: 1rem
     letter-spacing: 0.09rem
     text-align: center
     text-transform: uppercase
     transition: 0.4s background-color, 0.4s color
+
+    +tablet
+      font-size: 0.85rem
 
   > a
     &:hover
@@ -101,7 +119,10 @@
     transition: 0.4s color, 0.4s background-color
     color: $darkgrey
     background-color: $white
-    font-size: 1.3rem
+    font-size: 1rem
     letter-spacing: 0.2rem
     text-align: center
     text-transform: uppercase   
+
+    +tablet
+      font-size: 1.5rem
