Add lazy loading script

--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -40,8 +40,13 @@ img
 
 .lazy
   opacity: 0
-  transition: 0.6s opacity ease
-  transition-delay: 1.5s
+  transition: 0.9s opacity cubic-bezier(.17,.56,1,1)
+  transition-delay: 0.5s
+
+
+.lazy-gallery
+  opacity: 0
+  transition: 1.2s opacity ease-in-out
 
 .load
   opacity: 1
