--- a/content/themes/storyrugs/src/sass/_grid1.sass
+++ b/content/themes/storyrugs/src/sass/_grid1.sass
@@ -10,7 +10,8 @@
   margin: 0 auto
 
   +tablet
-    margin: 150px auto 0
+    margin: 50px auto 0
+    padding-top: 100px
 
   +tablet
     +column(2, 35px)
@@ -25,7 +26,6 @@
 
   .image-block:first-child
     +tablet
-      margin-top: 100px
 
 
 .underline
