Remove white underlines for navigation

--- a/content/themes/storyrugs/src/sass/_coContent.sass
+++ b/content/themes/storyrugs/src/sass/_coContent.sass
@@ -23,6 +23,10 @@
     h3
       margin-bottom: 15px
 
+    .excerpt
+      display: block
+      width: 100%
+
   .co-details
     .price
       width: 100%
