--- a/content/themes/storyrugs/src/sass/_coImages.sass
+++ b/content/themes/storyrugs/src/sass/_coImages.sass
@@ -8,11 +8,12 @@
   position: relative
   
   &:before
-    position: absolute
-    width: 100%
-    height: 400px
-    margin-top: -400px
-    z-index: 1
+    +tablet
+      position: absolute
+      width: 100%
+      height: 400px
+      margin-top: -400px
+      z-index: 1
 
   .wrapper:first-of-type
     height: 800px
