--- a/content/themes/storyrugs/src/sass/_nav.sass
+++ b/content/themes/storyrugs/src/sass/_nav.sass
@@ -31,9 +31,9 @@ nav
 
 
   .total
-    padding-left: 4px
-    padding-right: 2px
-    margin-right: 5px
+    padding-left: 8px
+    margin-right: 10px
+    width: 25px
 
 
 .nav-links
