--- a/content/themes/storyrugs/src/sass/_backToTop.sass
+++ b/content/themes/storyrugs/src/sass/_backToTop.sass
@@ -4,8 +4,31 @@
 /* includes positioning styles like display, padding, margin, height */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
+.back-to-top
+  width: 80%
+  margin: 100px auto
+
+  span
+    padding-right: 5px
 
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
 /* INCEPTION RULE: DO NOT nest more than 4  */
+
+.back-to-top
+  p
+    +gothmed
+    color: $darkgrey
+    font-size: 0.65rem
+    letter-spacing: 0.08rem
+    text-transform: uppercase
+    text-align: right
+    cursor: pointer
+    transition: 0.4s color
+
+    &:hover
+      color: $rust
+
+  span
+    +gothbold
