--- a/content/themes/storyrugs/src/sass/_mixins.sass
+++ b/content/themes/storyrugs/src/sass/_mixins.sass
@@ -13,7 +13,7 @@ $break-small: 500px
     @content
 
 =tiny
-  @media(max-width: #{$break-small})
+  @media(max-width: #{$break-medium})
     @content
     
 
